テキストと画像追加

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  <p>はじめてのWebサイトa</p>
+  <img src="/assetss/images/hero_pc.jpg">
+  <h1>My Goal</h1>
+  <p>私の目標</p>
+  <ol>
+    <li>プログラミンを頑張る</li>
+    <li>筋肉をつける</li>
+    <li>年収をあげる</li>
+    <li>服を買う</li>
+    <li>楽しく生きる</li>
+  </ol>
 </body>
+
 </html>
