--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+
+  <title>mymyPortfolio</title>
+  <meta name="description" content="初心者エンジニアのポートフォリオサイトですよ">
 </head>
 
 <body>
