--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
   <title>mymyPortfolio</title>
   <meta name="description" content="初心者エンジニアのポートフォリオサイトですよ">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/assetss/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assetss/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assetss/images/favicon-16x16.png">
+  <link rel="manifest" href="/assetss/images/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
