--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
   <link rel="manifest" href="/assetss/images/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+  <link href="/assetss/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <img src="/assetss/images/hero_pc.jpg">
-  <h1>My Goal</h1>
-  <p>私の目標</p>
-  <ol>
+  <h1 class="title">My Goal</h1>
+  <p class="lead">私の目標</p>
+  <ol class="list">
     <li>プログラミンを頑張る</li>
     <li>筋肉をつける</li>
     <li>年収をあげる</li>
