--- a/index.html
+++ b/index.html
@@ -19,22 +19,32 @@
 </head>
 
 <body>
-  <img src="/assetss/images/hero_pc.jpg">
-  <h1 class="title">My Goal</h1>
-  <p class="lead">私の目標</p>
-  <ol class="list">
-    <li>プログラミンを頑張る</li>
-    <li>筋肉をつける</li>
-    <li>年収をあげる</li>
-    <li>服を買う</li>
-    <li>楽しく生きる</li>
-  </ol>
-  <ul>
-    <li>emmetTest</li>
-    <li>iine</li>
-    <li>oi</li>
-  </ul>
-  <h1>aaaaaaaaaaaaa</h1>
+
+  <div class="hero">
+    <div class="container">
+      <p class="hero__message">はじめてのWebサイト</p>
+      <a href="" class="button">お問い合わせ</a>
+    </div>
+  </div>
+
+  <div class="container">
+    <h1 class="title">My Goal</h1>
+    <p class="lead">私の目標</p>
+    <ol class="list">
+      <li>プログラミンを頑張る</li>
+      <li>筋肉をつける</li>
+      <li>年収をあげる</li>
+      <li>服を買う</li>
+      <li>楽しく生きる</li>
+    </ol>
+    <ul>
+      <li>emmetTest</li>
+      <li>iine</li>
+      <li>oi</li>
+    </ul>
+    <h1>aaaaaaaaaaaaa</h1>
+  </div>
+
 </body>
 
 </html>
