--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 </head>
 
 <body>
+  <header class="header">
+    <p class="header__logo">ポートフォリオ</p>
+    <nav>
+      <ul class="gnav">
+        <li class="gnav__item">
+          <a href="" class="gnav__link">プロフィール</a>
+        </li>
+        <li class="gnav__item">
+          <a href="" class="gnav__link">スキルセット/成果物</a>
+        </li>
+        <li class="gnav__item">
+          <a href="" class="gnav__link">コンタクト</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
   <div class="hero">
     <div class="container">
