--- a/index.html
+++ b/index.html
@@ -61,6 +61,23 @@
     <h1>aaaaaaaaaaaaa</h1>
   </div>
 
+  <footer class="footer">
+    <nav>
+      <ul class="footer-nav">
+        <li class="footer-nav__item">
+          <a href="" class="footer-nav__link">プロフィール</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="" class="footer-nav__link">スキルセット/成果物</a>
+        </li>
+        <li class="footer-nav__item">
+          <a href="" class="footer-nav__link">コンタクト</a>
+        </li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">&copy; 2019.</p>
+  </footer>
+
 </body>
 
 </html>
