--- a/index.html
+++ b/index.html
@@ -43,22 +43,28 @@
     </div>
   </div>
 
-  <div class="container">
-    <h1 class="title">My Goal</h1>
-    <p class="lead">私の目標</p>
-    <ol class="list">
-      <li>プログラミンを頑張る</li>
-      <li>筋肉をつける</li>
-      <li>年収をあげる</li>
-      <li>服を買う</li>
-      <li>楽しく生きる</li>
-    </ol>
-    <ul>
-      <li>emmetTest</li>
-      <li>iine</li>
-      <li>oi</li>
-    </ul>
-    <h1>aaaaaaaaaaaaa</h1>
+  <div class="section">
+    <div class="container">
+      <h2 class="heading">
+        <span class="heading__main">PROFILE</span>
+        <span class="heading__sub">プロフィール</span>
+      </h2>
+      <div class="profile">
+        <figure class="profile__photo"></figure>
+        <div class="profile__body">
+          <p class="profile__name">
+            <ruby>
+              横田<rt>よこた</rt>和哉<rt>かずや</rt>
+            </ruby>
+          </p>
+          <p class="profile__text">
+            Tech Expertを受講後、Webエンジニアを目指して勉強中です！<br>
+            好きな食べ物：魚<br>
+            嫌いな食べ物；卵
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer class="footer">
