skillセクション追加

--- a/index.html
+++ b/index.html
@@ -67,6 +67,82 @@
     </div>
   </div>
 
+  <div class="section">
+    <div class="container">
+      <h2 class="heading">
+        <span class="heading__main">SKILL</span>
+        <span class="heading__sub">スキル</span>
+      </h2>
+      <div class="grid">
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images//website.svg" alt="">
+            </figure>
+            <h3 class="skill__title">HTML/CSS</h3>
+            <p class="skill__description">HTML/CSSを正しく設計することができます。</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images//webdesign.svg" alt="">
+            </figure>
+            <h3 class="skill__title">AdobeXD</h3>
+            <p class="skill__description">デザインツールを扱うことができます。</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images//git.svg" alt="">
+            </figure>
+            <h3 class="skill__title">Git開発</h3>
+            <p class="skill__description">GitHubでソースレビューを通した開発ができます。</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images//wordpress.svg" alt="">
+            </figure>
+            <h3 class="skill__title">WordPress</h3>
+            <p class="skill__description">WordPressによるメディア設計が可能です。</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images//jquery.svg" alt="">
+            </figure>
+            <h3 class="skill__title">jQuery</h3>
+            <p class="skill__description">jQueryによるUI実装が可能です。</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images/seo.svg" alt="">
+            </figure>
+            <h3 class="skill__title">SEO</h3>
+            <p class="skill__description">SEOに適したマークアップと運営構築が可能です。</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="skill">
+            <figure class="skill__icon">
+              <img src="/assetss/images/ruby.svg" alt="">
+            </figure>
+            <h3 class="skill__title">Ruby on Rails</h3>
+            <p class="skill__description">Ruby on Railsを用いたwebサービスの開発が可能です。</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
   <footer class="footer">
     <nav>
       <ul class="footer-nav">
