リファクタリング

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ruby>
           </p>
           <p class="profile__text">
-            Tech Expertを受講後、Webエンジニアを目指して勉強中です！<br>
+            高知県でTech Expertを受講後、Webエンジニアを目指して勉強中です！<br>
             好きな食べ物：魚<br>
             嫌いな食べ物；卵
           </p>
