--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="section section--light">
     <div class="container">
       <h2 class="heading">
         <span class="heading__main">SKILL</span>
@@ -139,6 +139,23 @@
           </div>
         </div>
 
+      </div>
+    </div>
+  </div>
+
+  <div class="section section--dark">
+    <div class="container">
+      <div class="card">
+        <div class="movie">
+          <div>
+            <iframe class="movie__iframe" width="560" height="315" src="https://www.youtube.com/embed/2uOVDvzMtsY?showinfo=0&rel=0&controls=0&modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="movie__body">
+            <h2 class="movie__title">好きな音楽</h2>
+            <p class="movie__date">2019.07.01</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis totam eius tempora fuga ad facilis repudiandae modi, numquam doloribus, mollitia sed minima accusantium nulla non eveniet. At voluptate aspernatur voluptates?</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
