--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <nav>
       <ul class="gnav">
         <li class="gnav__item">
-          <a href="" class="gnav__link">プロフィール</a>
+          <a href="#profile" class="gnav__link">プロフィール</a>
         </li>
         <li class="gnav__item">
-          <a href="" class="gnav__link">スキルセット/成果物</a>
+          <a href="#skill" class="gnav__link">スキルセット/成果物</a>
         </li>
         <li class="gnav__item">
-          <a href="" class="gnav__link">コンタクト</a>
+          <a href="#contact" class="gnav__link">コンタクト</a>
         </li>
       </ul>
     </nav>
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="section" id="profile">
     <div class="container">
       <h2 class="heading">
         <span class="heading__main">PROFILE</span>
@@ -64,10 +64,17 @@
           </p>
         </div>
       </div>
+      <div class="twitter">
+        <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">
+          Tweets by TwitterDev
+        </a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+        </script>
+      </div>
     </div>
   </div>
 
-  <div class="section section--light">
+  <div class="section section--light" id="skill">
     <div class="container">
       <h2 class="heading">
         <span class="heading__main">SKILL</span>
@@ -159,18 +166,38 @@
       </div>
     </div>
   </div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3324.725333838086!2d133.52955336521447!3d33.56051198074262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354e1924880194fd%3A0x150dbd3dd48c090e!2z6auY55-l5Z-O!5e0!3m2!1sja!2sjp!4v1563349908229!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+  <div class="section" id="contact">
+    <h2 class="heading">
+      <span class="heading__main">CONTACT</span>
+      <span class="heading__sub">お問い合わせ</span>
+    </h2>
+    <form class="contact">
+      <label for="name" class="contact__label">名前<span class="required">*</span></label>
+      <input type="text" name="name" id="name" class="input" autocomplete="name" required>
+      <label for="email" class="contact__label">メールアドレス<span class="required">*</span></label>
+      <input type="email" name="email" id="email" class="input" required>
+      <label for="body" class="contact__label">内容<span class="required">*</span></label>
+      <textarea name="body" id="body" class="input input--textarea" required></textarea>
+      <div class="contact__footer">
+        <button type="submit" class="button button--sm button--black">送信</button>
+      </div>
+    </form>
+  </div>
 
   <footer class="footer">
     <nav>
       <ul class="footer-nav">
         <li class="footer-nav__item">
-          <a href="" class="footer-nav__link">プロフィール</a>
+          <a href="#profile" class="footer-nav__link">プロフィール</a>
         </li>
         <li class="footer-nav__item">
-          <a href="" class="footer-nav__link">スキルセット/成果物</a>
+          <a href="#skill" class="footer-nav__link">スキルセット/成果物</a>
         </li>
         <li class="footer-nav__item">
-          <a href="" class="footer-nav__link">コンタクト</a>
+          <a href="#contact" class="footer-nav__link">コンタクト</a>
         </li>
       </ul>
     </nav>
