--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
+  <meta property="og:url" content="https://stoic-wilson-1d7f20.netlify.com/" />
+  <meta property="og:title" content="kazuya_yokota_portforio" />
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="ポートフォリオです。" />
+  <meta property="og:image" content="https://stoic-wilson-1d7f20.netlify.com/assetss/images/profile.jpg" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@yokocha124" />
+  <meta property="og:site_name" content="kazuya_yokota_portforio" />
+  <meta property="og:locale" content="ja_JP" />
+
   <link href="/assetss/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
