web_font_setting

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <meta property="og:site_name" content="kazuya_yokota_portforio" />
   <meta property="og:locale" content="ja_JP" />
 
+
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
   <link href="/assetss/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
