add_sns_icon_to_fontawsome

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta property="og:site_name" content="kazuya_yokota_portforio" />
   <meta property="og:locale" content="ja_JP" />
 
-
+  <script src="https://kit.fontawesome.com/bb8da7cf89.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
   <link href="/assetss/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -84,6 +84,11 @@
             好きな食べ物：魚<br>
             嫌いな食べ物；卵
           </p>
+          <div class="profile__sns">
+            <a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw%7Ctwcamp%5Eembeddedtimeline%7Ctwterm%5Eprofile%3ATwitterDev&ref_url=http%3A%2F%2Flocalhost%3A3000%2F" target="_blank" rel="noopener" class="sns-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
         </div>
       </div>
       <div class="twitter">
