--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
         <input type="email" name="email" id="email" class="input" required>
         <label for="body" class="contact__label">内容<span class="required">*</span></label>
         <textarea name="body" id="body" class="input input--textarea" required></textarea>
+        <span></span>  <!--for IE11 -->
         <div class="contact__footer">
           <button type="submit" class="button button--sm button--black">送信</button>
         </div>
